--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>test</h1>
     <div class="header">Hello GIT</div>
+    <div class="container">
+        <h1 class="title">GIT</h1>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At et expedita totam eius necessitatibus facilis amet nisi nemo dolores? Recusandae necessitatibus quaerat itaque. Molestiae, deserunt quas unde nostrum nesciunt quo.</p>
+    </div>
 </body>
 </html>
