--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>test</h1>
-    <div class="header">Hello GIT</div>
+    <div class="header">
+        <h1>Hello GIT</h1>
+        <a href="#" class="nav__link">Home</a>
+        <a href="#" class="nav__link">About us</a>
+        <a href="#" class="nav__link">Contact</a>
+    </div>
     <div class="container">
         <h1 class="title">GIT</h1>
         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At et expedita totam eius necessitatibus facilis amet nisi nemo dolores? Recusandae necessitatibus quaerat itaque. Molestiae, deserunt quas unde nostrum nesciunt quo.</p>
