Добавили html для бургера

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
         <h1 class="title">GIT</h1>
         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At et expedita totam eius necessitatibus facilis amet nisi nemo dolores? Recusandae necessitatibus quaerat itaque. Molestiae, deserunt quas unde nostrum nesciunt quo.</p>
     </div>
+    <div class="burger">
+        <span class="burger-inner"></span>
+    </div>
 </body>
 </html>
