Добавил иконку в header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>test</h1>
     <div class="header">
-        <h1>Hello GIT</h1>
+        <h1 class="title">Hello GIT</h1>
         <a href="#" class="nav__link">Home</a>
         <a href="#" class="nav__link">About us</a>
         <a href="#" class="nav__link">Contact</a>
